# orust-OS

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Installation-Manual.md  LICENSE-MIT  README.md  SECURITY.md  config.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
LICENSE/: LICENSE-APACHE
orust_os/: Cargo.toml  x86_64-orust_os.json
orust_os/.cargo/: config.toml
orust_os/src/: main.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/tests/: stack_overflow.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  test-skeleton.rs  test-skeleton.txt
