[package]
name = "orust_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "=0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.0"
crossbeam-queue = {version = "0.3.11", default-features = false, features = ["alloc"] }
conquer-once = {version = "0.2.0", default-features = false}
futures-util = {version = "0.3.4", default-features = false, features = ["alloc"] }


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
    ]
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 5    # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
